# libvmod-jemalloc

./: .gitignore  Makefile.am  README.rst  configure.ac  vmod-jemalloc.spec
debian/: changelog  control  dirs
src/: Makefile.am  vmod_jemalloc.c  vmod_jemalloc.vcc
src/tests/: test01.vtc  test02.vtc
